--- a/wp-content/themes/mstoday/less/style.less
+++ b/wp-content/themes/mstoday/less/style.less
@@ -294,7 +294,7 @@ h1.entry-title {
 }
 
 .entry-content {
-  .alignfull, .alignwide, &>aside {
+  &>aside {
     max-width: unset;
     margin-left: ~"calc(-2 * 15.021276594%)";
     margin-right: ~"calc(-2 * 15.021276594%)";
